# mdcat

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  test.md
docs/adr/: ADR-0001-language-and-core-stack.md  ADR-0002-mermaid-rendering.md  ADR-0003-mermaid-png-rendering.md
kitty-pager/: Cargo.toml  README.md
kitty-pager/src/: document.rs  input.rs  lib.rs  renderer.rs  terminal.rs
src/: input.rs  main.rs  pager.rs  terminal.rs
src/render/: code.rs  images.rs  links.rs  markdown.rs  mermaid.rs  mod.rs
